--- a/docs/usage/load_sft_from_file.ipynb
+++ b/docs/usage/load_sft_from_file.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from soapcw import cw\n",
+    "import soapcw\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# load sft file between 100.5,100.6 Hz\n",
-    "sft = cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6)\n",
+    "sft = soapcw.cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6)\n",
     "# normalise the SFT to its running median\n",
     "sft.norm_rngmed()\n",
     "# if there are gaps in the data, fill these with a constant value\n",
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# or for single line run\n",
-    "sft = cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6,norm=True,summed=True,filled=True)"
+    "sft = soapcw.cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6,norm=True,summed=True,filled=True)"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sft_veto = cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6,norm=True,summed=True,filled=True,vetolist = vetolist)"
+    "sft_veto = soapcw.cw.LoadSFT(\"./data/H10124_H1_1800SFT-F100.0_102.1.sft\",fmin=100.5,fmax=100.6,norm=True,summed=True,filled=True,vetolist = vetolist)"
    ]
   },
   {
@@ -154,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soap310",
+   "display_name": "soapcw",
    "language": "python",
-   "name": "soap310"
+   "name": "soapcw"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
