--- a/docs/usage/write_sft_to_file.ipynb
+++ b/docs/usage/write_sft_to_file.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from soap import cw\n",
+    "import soapcw\n",
     "import numpy as np"
    ]
   },
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# load timeseries from file \n",
-    "gwf_ts = cw.timeseries.LoadTimeSeries(\"./data/H-H1_CWINJ_TOT-963400064-128.gwf\",channel_name = \"H1:CWINJ_TOT\")"
+    "gwf_ts = soapcw.cw.timeseries.LoadTimeSeries(\"./data/H-H1_CWINJ_TOT-963400064-128.gwf\",channel_name = \"H1:CWINJ_TOT\")"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "#generate a random timeseries\n",
-    "timeseries = cw.timeseries.TimeSeries()\n",
+    "timeseries = soapcw.cw.timeseries.TimeSeries()\n",
     "#set sampling rate\n",
     "timeseries.delta_t = 1./2048\n",
     "# set start time\n",
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "# create an SFT object\n",
-    "sft = cw.sft.SFT()\n",
+    "sft = soapcw.cw.sft.SFT()\n",
     "sft.sft = fft[:int(len(fft)/2)]\n",
     "sft.frequencies = freqs\n",
     "sft.det_name = \"H1\"\n",
@@ -184,9 +184,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soap",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "soap"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,9 +198,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
