update to soap imports in docs

--- a/docs/transitionmatrix.ipynb
+++ b/docs/transitionmatrix.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import soap"
+    "import soapcw"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "track = soap.single_detector(transition_matrix,data)"
+    "track = soapcw.single_detector(transition_matrix,data)"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "track_down = soap.single_detector(transition_matrix_down,data)"
+    "track_down = soapcw.single_detector(transition_matrix_down,data)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "track_down2 = soap.single_detector(transition_matrix_down2,data)"
+    "track_down2 = soapcw.single_detector(transition_matrix_down2,data)"
    ]
   },
   {
@@ -354,5 +354,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
